--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://umingmi.github.io/Lycee/",
+  "homepage": "https://umingmi.github.io/Lycee",
   "name": "lycee",
   "version": "0.1.0",
   "private": true,
