--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
+    "react-zoom-pan-pinch": "^3.3.0",
     "styled-components": "^6.1.1",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
